--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build" : "tsc",
-    "start" :"node dist/index.js"
+    "start" :"node dist/index.js",
+    "dev" : "tsc && node dist/index.js"
   },
   "type": "module",
   "keywords": [],
